--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
             "@types/react": "^19.2.7",
             "@types/react-dom": "^19.2.3",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "esbuild": "^0.27.1",
             "gh-pages": "^6.3.0",
             "vite": "^6.4.1"
       },
